--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "name": "rps-project",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "ws": "^7.3.0"
+  },
+  "devDependencies": {
+    "sass": "^1.26.7"
+  }
 }
