--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "crypto-js": "^4.0.0",
+    "nodemon": "^2.0.4",
+    "parcel": "^1.12.4",
     "ws": "^7.3.0"
   },
   "devDependencies": {
     "sass": "^1.26.7"
+  },
+  "scripts": {
+    "start": "nodemon server/index.js",
+    "start-client": "parcel client/index.html"
   }
 }
